# Major-project

backend/: .env.example  README.md  pyproject.toml
backend/app/: db.py  main.py  models.py  seed.py
backend/app/routers/: __init__.py  classify.py  explain.py  export.py  optimize.py  predict.py  recommend.py
backend/app/services/: knowledge.py
backend/data/: seed_allelopathy.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Charts.tsx  DownloadCSV.tsx
scripts/: dev.sh
