[tool.poetry]
name = "allelopathy-advisor"
version = "0.1.0"
description = "Yield prediction and cover crop recommendation with allelopathic knowledge"
authors = ["Cursor AI <dev@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
scikit-learn = "^1.5.0"
xgboost = "^2.1.0"
pandas = "^2.2.2"
numpy = "^2.0.0"
psycopg = {version = "^3.1.18", extras=["binary"]}
sqlalchemy = "^2.0.30"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
shap = "^0.46.0"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
httpx = "^0.27.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

